--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "knex": "^0.95.6",
     "pg": "^8.6.0",
+    "socket.io": "^4.1.2",
     "strapi": "^3.6.2",
     "strapi-admin": "^3.6.2",
     "strapi-connector-bookshelf": "^3.6.2",
